fix remaining pomos on mobile

--- a/source/scss/components.scss
+++ b/source/scss/components.scss
@@ -688,6 +688,7 @@ footer>.container {
             margin-right: 0;
             margin-bottom: 8px;
             text-align: center;
+            width: 100%;
         }
         .remaining-pomos-icon {
             height: 40px;
